--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,69 @@
-/* You can add global styles to this file, and also import other style files */
+  @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+  :root
+  {
+    --primary-color: #1a26ff;
+    --primary-text-color: #ffffff;
+  }
+
+  .material-symbols-outlined {
+    font-size: 45px;
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 700,
+    'GRAD' 200,
+    'opsz' 100
+  }
+ body {
+    min-height: 100vh;
+  }
+
+  *
+  {
+    font-family: 'Nunito', sans-serif;
+    font-size: 20px;
+
+    padding: 0px;
+    margin: 0px;
+  }
+
+  h1
+  {
+    font-weight: 800;
+  }
+  h2
+{
+  color: var(--primary-color);
+  margin-top: 20px;
+  font-weight: 900;
+  font-size: 30px;
+  text-align: center;
+}
+p
+{
+  font-weight: 500;
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+  .NotScroll
+  {
+    height: 100%;
+    overflow: hidden;
+  }
+
+  ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+
+    padding: 30px;
+    li {
+      font-size: 18px;
+    }
+    li::marker {
+      color: var(--primary-color);
+    }
+  }
